--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,82 +35,90 @@ vision lol
 <title>EmojiVision</title>
 </head>
 <body id="mainpage" data-spy="scroll" data-target=".navbar-nav">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#" data-scroll="top" id="mainanchor">EmojiVision</a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="#visionpage" data-scroll="visionpage">Vision</a>
-                        </li>
-                        <li>
-                            <a href="#productpage" data-scroll="productpage">Products</a>
-                        </li>
-                        <li>
-                            <a href="#teampage" data-scroll="teampage">Our Team</a>
-                        </li>
-                        <li>
-                            <a href="#contactpage" data-scroll="contactpage">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-    <div id="splash" class="fill container">
-
-      <div class="row">
-        <div id="vertical-center">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-          <div class="expandOpen intro">
-          EmojiVision
-        </div>
-          <img id="moreinfo" class="floating img-responsive" src="emojis/down.png">
-        </div>
-
-        <div class="col-md-3"></div>
-        </div>
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#" data-scroll="top" id="mainanchor">EmojiVision</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="#visionpage" data-scroll="visionpage">Vision</a>
+          </li>
+          <li>
+            <a href="#productpage" data-scroll="productpage">Products</a>
+          </li>
+          <li>
+            <a href="#teampage" data-scroll="teampage">Our Team</a>
+          </li>
+          <li>
+            <a href="#contactpage" data-scroll="contactpage">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
 
-     <div id="visionpage" class="container page vision">
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="pagetitle col-md-6">OUR VISION</div>
-        <div class="col-md-3"></div>
+  <div id="splash" class="fill container">
+
+
+
+    <div class="row">
+      <div id="vertical-center">
+       <div class="col-md-3"></div>
+       <div class="col-md-6">
+        <div class="expandOpen intro">
+          EmojiVision
+        </div>
+        <img id="moreinfo" class="floating img-responsive" src="emojis/down.png">
       </div>
-           <div class="row">
+      <div class="col-md-3"></div>
+    </div>
+  </div>
+</div>
 
+<div id="visionpage" class="container page vision">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="pagetitle col-md-6">
+              <img src="emojis/475.png" alt="" class="icon img-responsive">
+
+      OUR VISION
+
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+
+
+
+      <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
           <div class="row">
-            <div class="col-md-4 description">
-              <img src="emojis/656.png" alt="" class="icon img-responsive">
-              <h3>EMOJI VISION</h3>
-              <p>blah blah blahblahblah  blahblahblah  blahblahblah  blahblahblah blah </p>
+            <div class="col-md-4 col-sm-12 description">
+              <img src="emojis/705.png" alt="" class="icon img-responsive">
+              <h3>Emoji Future</h3>
+              <p>Many modern languages have existed for thousands of years. Would you use a thousand-year-old computer? Would you ride in a thousand-year-old airplane?</p>
+              <p>Neither would we.</p>
 
             </div>
-            <div class="col-md-4 description">
-              <img src="emojis/122.png" alt="" class="icon img-responsive">
-
-              <h3>EMOJI WORLD</h3>
-              <p>blah blah blahblahblah  blahblahblah  blahblahblah  blahblahblah blah </p>
-
+            <div class="col-md-4 col-sm-12 description">
+              <img src="emojis/783.png" alt="" class="icon img-responsive">
+              <h3>Emoji Disruption</h3>
+              <p>87% of humans prefer emojis.</p>
+              <p>EmojiVision's goal is to faciliate this disruption of language through research, development, and open dialogue about the increasingly unnecessary nature of written language.</p>
             </div>
-            <div class="col-md-4 description">
-              <img src="emojis/333.png" alt="" class="icon img-responsive">
-
-              <h3>EMOJI EDUCATION</h3>
-              <p>blah blah blahblahblah  blahblahblah  blahblahblah  blahblahblah blah </p>
+            <div class="col-md-4 col-sm-12 description">
+              <img src="emojis/512.png" alt="" class="icon img-responsive">
+              <h3>Emoji Worldwide</h3>
+              <p>Emoji is the first language spoken internationally. Finally, the arbitrary boundaries between nations and people are dissolved.</p>
+              <p>Join us and celebrate the dawn of communitation without borders.</p>
 
             </div>
           </div>
@@ -119,31 +127,39 @@ vision lol
       </div>
     </div>
 
-     <div id="productpage" class="container page products">
 
+    <div id="productpage" class="container page products">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-6 pagetitle">PRODUCTS</div>
+        <div class="col-md-6 pagetitle">
+              <img src="emojis/353.png" alt="" class="icon img-responsive">
+
+          PRODUCTS</div>
         <div class="col-md-3"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5 description">
+              <img src="emojis/538.png" alt="" class="icon img-responsive">
+
+          <h3>EMOJI COMICS</h3>
+        </div>
+        <div class="col-md-5 description">
+              <img src="emojis/342.png" alt="" class="icon img-responsive">
+
+          <h3>EMOJI CODE</h3>
+        </div>
+        <div class="col-md-1"></div>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5 product">emoji comics</div>
-        <div class="col-md-5 product">emoji code</div>
-        <div class="col-md-1"></div>
 
-
-      </div>
-      </div>
-
-     <div id="teampage" class="container page team">
-
+    <div id="teampage" class="container page team">
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6 pagetitle">OUR TEAM</div>
         <div class="col-md-3"></div>
-    </div>
-    <div class="row">
+      </div>
+      <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5 product">emoji comics</div>
         <div class="col-md-5 product">emoji code</div>
@@ -153,14 +169,14 @@ vision lol
       </div>
     </div>
 
-     <div id="contactpage" class="container page contact">
+    <div id="contactpage" class="container page contact">
 
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6 pagetitle">Contact</div>
         <div class="col-md-3"></div>
-    </div>
-    <div class="row">
+      </div>
+      <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5 product">emoji comics</div>
         <div class="col-md-5 product">emoji code</div>
@@ -169,5 +185,5 @@ vision lol
 
       </div>
     </div>
-</body>
-</html>
+  </body>
+  </html>
