--- a/public/css/main.css
+++ b/public/css/main.css
@@ -529,24 +529,17 @@ input[type="radio"]:checked + label {
     font-shadow: none; }
 
 #mainpage .page {
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  min-height: 100%;
   min-width: 100%;
-  padding-top: 50px; }
-#mainpage .vision {
+  padding-top: 50px;
+  display: inline-block;
   background-color: white; }
 #mainpage #moreinfo {
   margin: 0 auto;
   margin-top: 45px;
   animation-duration: 4s;
   animation-name: bounce; }
-@keyframes bounce {
-  from {
-    width: 100%; }
-  to {
-    width: 30%; } }
-#mainpage .products {
-  background-color: red; }
 #mainpage .pagetitle {
   font-family: 'Lato';
   font-size: 3em;
@@ -561,14 +554,14 @@ input[type="radio"]:checked + label {
     padding: 10px;
     padding-top: 0px;
     margin-top: 5px;
-    border-bottom: 5px solid #36D7B7; }
+    border-bottom: 5px solid #36D7B7;
+    font-family: 'Oswald'; }
+  #mainpage .description p {
+    font-size: 1.2em;
+    font-family: 'Open Sans'; }
 #mainpage .icon {
   margin: 0 auto;
   padding: 0px; }
-#mainpage .team {
-  background-color: yellow; }
-#mainpage .contact {
-  background-color: pink; }
 #mainpage .product {
   background-color: white;
   border: 1px solid black; }
