--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,14 +1,14 @@
 #mainpage {
   .page {
-    width: 100vh;
-    height: 100vh;
+    width: 100%;
+    min-height: 100%;
     min-width: 100%;
     padding-top: 50px;
-    // background-color: white;
+    display: inline-block;
+    background-color: white;
   }
 
   .vision {
-    background-color: white;
   }
 
   #moreinfo {
@@ -18,18 +18,7 @@
     animation-name: bounce;
   }
 
-  @keyframes bounce {
-    from {
-      width: 100%;
-    }
-
-    to {
-      width: 30%;
-    }
-  }
-
   .products {
-    background-color: red;
   }
 
 
@@ -49,6 +38,12 @@
       padding-top: 0px;
       margin-top: 5px;
       border-bottom: 5px solid $button-color;
+      font-family: 'Oswald';
+    }
+
+    p {
+      font-size: 1.2em;
+      font-family: 'Open Sans';
     }
 
     padding: 30px;
@@ -60,11 +55,9 @@
   }
 
   .team {
-    background-color: yellow;
   }
 
   .contact {
-    background-color: pink;
   }
 
   .product {
