--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@ vision lol
 
 
 <meta name="description" content="EmojiVision Industries">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
