--- a/sass/index.scss
+++ b/sass/index.scss
@@ -75,13 +75,14 @@
   }
   .intro {
     visibility: hidden;
-    border: 10px solid white;
+    // border: 10px solid white;
     color: black;
-    font-family: 'Lato';
-    padding: 25px;
-    background-color: rgba(255, 255, 255, 0.75);
+    font-family: 'Pacifico';
+    text-shadow: 2px 2px 2px $button-color, -2px -2px 2px $button-color;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.85);
     text-align: center;
-    font-size: 5em;
+    font-size: 6em;
   }
 
   .fill {
