--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@ vision lol
 
 <meta name="description" content="EmojiVision Industries">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+<meta charset="utf-8">
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
@@ -26,7 +26,7 @@ vision lol
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/js/vendor.js"></script>
 <script type="text/javascript" src="/js/slick.js"></script>
-<script type="text/javascript" src="/js/scripts/indexpage.js"></script>
+<script type="text/javascript" src="/js/indexpage.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -88,7 +88,7 @@ vision lol
   <div class="row">
     <div class="col-md-3"></div>
     <div class="pagetitle col-md-6">
-              <img src="emojis/475.png" alt="" class="icon img-responsive">
+      <img src="emojis/475.png" alt="" class="icon img-responsive">
 
       OUR VISION
 
@@ -98,93 +98,118 @@ vision lol
 
 
 
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-          <div class="row">
-            <div class="col-md-4 col-sm-12 description">
-              <img src="emojis/705.png" alt="" class="icon img-responsive">
-              <h3>Emoji Future</h3>
-              <p>Many modern languages have existed for thousands of years. Would you use a thousand-year-old computer? Would you ride in a thousand-year-old airplane?</p>
-              <p>Neither would we.</p>
+        <div class="col-md-4 col-sm-12 description">
+          <img src="emojis/705.png" alt="" class="icon img-responsive">
+          <h3>Emoji Future</h3>
+          <p>Many modern languages have existed for thousands of years. Would you use a thousand-year-old computer? Would you ride in a thousand-year-old airplane?</p>
+          <p>Neither would we.</p>
 
-            </div>
-            <div class="col-md-4 col-sm-12 description">
-              <img src="emojis/783.png" alt="" class="icon img-responsive">
-              <h3>Emoji Disruption</h3>
-              <p>87% of humans prefer emojis.</p>
-              <p>EmojiVision's goal is to faciliate this disruption of language through research, development, and open dialogue about the increasingly unnecessary nature of written language.</p>
-            </div>
-            <div class="col-md-4 col-sm-12 description">
-              <img src="emojis/512.png" alt="" class="icon img-responsive">
-              <h3>Emoji Worldwide</h3>
-              <p>Emoji is the first language spoken internationally. Finally, the arbitrary boundaries between nations and people are dissolved.</p>
-              <p>Join us and celebrate the dawn of communitation without borders.</p>
-
-            </div>
-          </div>
         </div>
-        <div class="col-md-1"></div>
-      </div>
-    </div>
-
-
-    <div id="productpage" class="container page products">
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 pagetitle">
-              <img src="emojis/353.png" alt="" class="icon img-responsive">
-
-          PRODUCTS</div>
-        <div class="col-md-3"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5 description">
-              <img src="emojis/538.png" alt="" class="icon img-responsive">
-
-          <h3>EMOJI COMICS</h3>
+        <div class="col-md-4 col-sm-12 description">
+          <img src="emojis/783.png" alt="" class="icon img-responsive">
+          <h3>Emoji Disruption</h3>
+          <p>87% of humans prefer emojis to traditional words and sentences.</p>
+          <p>EmojiVision's goal is to faciliate this disruption of language through research, development, and open dialogue about the increasingly unnecessary nature of written language.</p>
         </div>
-        <div class="col-md-5 description">
-              <img src="emojis/342.png" alt="" class="icon img-responsive">
+        <div class="col-md-4 col-sm-12 description">
+          <img src="emojis/512.png" alt="" class="icon img-responsive">
+          <h3>Emoji Worldwide</h3>
+          <p>Emoji is the first language spoken internationally. Finally, the arbitrary boundaries between nations and people are dissolved.</p>
+          <p>Join us and celebrate the dawn of communitation without borders.</p>
 
-          <h3>EMOJI CODE</h3>
         </div>
-        <div class="col-md-1"></div>
       </div>
     </div>
-
-    <div id="teampage" class="container page team">
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 pagetitle">OUR TEAM</div>
-        <div class="col-md-3"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5 product">emoji comics</div>
-        <div class="col-md-5 product">emoji code</div>
-        <div class="col-md-1"></div>
+    <div class="col-md-1"></div>
+  </div>
+</div>
 
 
-      </div>
+<div id="productpage" class="container page products">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 pagetitle">
+      <img src="emojis/353.png" alt="" class="icon img-responsive">
+
+      OUR PRODUCTS</div>
+      <div class="col-md-3"></div>
     </div>
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-5 description">
+        <img src="emojis/538.png" alt="" class="icon img-responsive">
 
-    <div id="contactpage" class="container page contact">
-
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 pagetitle">Contact</div>
-        <div class="col-md-3"></div>
+        <h3>EMOJI COMICS</h3>
+        <img src="img/examplecomic.png" alt="" class="img-responsive">
+        <p>Full-featured program for designing and publishing Emoji-based comic strips.</p>
       </div>
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5 product">emoji comics</div>
-        <div class="col-md-5 product">emoji code</div>
-        <div class="col-md-1"></div>
+      <div class="col-md-5 description">
+        <img src="emojis/342.png" alt="" class="icon img-responsive">
 
+        <h3>EMOJI CODE</h3>
+        <img src="img/examplecodesmall.png" alt="" class="icon img-responsive">
+        <p>Encrypt messages into a proprietary Emoji language and communicate entirely via Emoji.</p>
 
       </div>
+      <div class="col-md-1"></div>
     </div>
-  </body>
-  </html>
+  </div>
+
+  <div id="teampage" class="container page team">
+    <div class="row">
+      <div class="col-md-3"></div>
+
+      <div class="col-md-6 pagetitle">
+      <img src="emojis/258.png" alt="" class="icon img-responsive">
+        OUR TEAM
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 description">
+        <h3>Professor Moon</h3>
+      <img src="img/profmoon.jpg" alt="" class="icon img-responsive">
+
+      </div>
+      <div class="col-md-3 description">
+        <h3>Dr. Jennifer iMessage</h3>
+      <img src="img/jenny.jpg" alt="" class="icon img-responsive">
+
+      </div>
+      <div class="col-md-3 description">
+        <h3>Princess Cupcake</h3>
+      <img src="img/princess.jpg" alt="" class="icon img-responsive">
+
+      </div>
+      <div class="col-md-3 description">
+        <h3>Petey Pizza</h3>
+      <img src="img/pizzaface.jpg" alt="" class="icon img-responsive">
+
+      </div>
+
+
+    </div>
+  </div>
+
+  <div id="contactpage" class="container page contact">
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 pagetitle">CONTACT US</div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-5 product">emoji comics</div>
+      <div class="col-md-5 product">emoji code</div>
+      <div class="col-md-1"></div>
+
+
+    </div>
+  </div>
+</body>
+</html>
