--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,8 +105,8 @@ vision lol
         <div class="col-md-4 col-sm-12 description">
           <img src="emojis/705.png" alt="" class="icon img-responsive">
           <h3>Emoji Future</h3>
-          <p>Many modern languages have existed for thousands of years. Would you use a thousand-year-old computer? Would you ride in a thousand-year-old airplane?</p>
-          <p>Neither would we.</p>
+          <p>Many "modern" languages have existed for thousands of years. Would you use a thousand-year-old computer? Would you ride in a thousand-year-old airplane?</p>
+          <p>We didn't think so. Here at EmojiVision, we think it's time for an upgrade.</p>
 
         </div>
         <div class="col-md-4 col-sm-12 description">
@@ -120,7 +120,6 @@ vision lol
           <h3>Emoji Worldwide</h3>
           <p>Emoji is the first language spoken internationally. Finally, the arbitrary boundaries between nations and people are dissolved.</p>
           <p>Join us and celebrate the dawn of communitation without borders.</p>
-
         </div>
       </div>
     </div>
@@ -142,10 +141,9 @@ vision lol
       <div class="col-md-1"></div>
       <div class="col-md-5 description">
         <img src="emojis/538.png" alt="" class="icon img-responsive">
-
         <h3>EMOJI COMICS</h3>
         <img src="img/examplecomic.png" alt="" class="img-responsive">
-        <p>Full-featured program for designing and publishing Emoji-based comic strips.</p>
+        <p>A full-featured web-based application for designing and publishing Emoji-based comic strips.</p>
       </div>
       <div class="col-md-5 description">
         <img src="emojis/342.png" alt="" class="icon img-responsive">
@@ -170,25 +168,25 @@ vision lol
       <div class="col-md-3"></div>
     </div>
     <div class="row">
-      <div class="col-md-3 description">
+      <div class="col-xs-12 col-sm-3 description">
         <h3>Professor Moon</h3>
       <img src="img/profmoon.jpg" alt="" class="icon img-responsive">
-
+        <p class='jobtitle'>Founder and Managing Director</p>
       </div>
-      <div class="col-md-3 description">
+      <div class="col-xs-12 col-sm-3 description">
         <h3>Dr. Jennifer iMessage</h3>
       <img src="img/jenny.jpg" alt="" class="icon img-responsive">
-
+      <p class='jobtitle'>Director Of Emoji Research</p>
       </div>
-      <div class="col-md-3 description">
+      <div class="col-xs-12 col-sm-3 description">
         <h3>Princess Cupcake</h3>
       <img src="img/princess.jpg" alt="" class="icon img-responsive">
-
+      <p class='jobtitle'>Emoji Kingdom Liaison</p>
       </div>
-      <div class="col-md-3 description">
+      <div class="col-xs-12 col-sm-3 description">
         <h3>Petey Pizza</h3>
       <img src="img/pizzaface.jpg" alt="" class="icon img-responsive">
-
+      <p class='jobtitle'>Director Of Communications</p>
       </div>
 
 
@@ -199,7 +197,10 @@ vision lol
 
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-6 pagetitle">CONTACT US</div>
+
+      <div class="col-md-6 pagetitle">
+      <img src="emojis/393.png" alt="" class="icon img-responsive">
+        CONTACT</div>
       <div class="col-md-3"></div>
     </div>
     <div class="row">
