--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,32 +114,6 @@ button:active {
 .fontbig {
   font-size: 1.4em; }
 
-#header {
-  background-color: black;
-  border-bottom: 2px solid white;
-  color: #36D7B7;
-  font-family: 'Lato';
-  height: 20px;
-  line-height: 25px;
-  margin-bottom: 5px;
-  padding: 10px;
-  text-align: center;
-  width: 100%; }
-  #header .title {
-    font-size: 1.5em;
-    font-family: 'Pacifico'; }
-
-.subtitle {
-  padding-left: 20px; }
-
-#header a {
-  text-decoration: none;
-  display: inline-block;
-  color: #36D7B7; }
-
-#header a:hover {
-  color: white; }
-
 #landing a {
   text-decoration: none;
   color: black; }
@@ -383,11 +357,9 @@ input[type="radio"]:checked + label {
 
 #container {
   width: 100%;
-  /* Firefox */
   display: -moz-box;
   -moz-box-pack: center;
   -moz-box-align: center;
-  /* Safari and Chrome */
   display: -webkit-box;
   -webkit-box-pack: center;
   -webkit-box-align: center;
@@ -599,5 +571,9 @@ html, body {
   margin-top: -100px;
   left: 0;
   width: 100%; }
+
+.jobtitle {
+  text-align: center;
+  font-style: italic; }
 
 /*# sourceMappingURL=main.css.map */
