--- a/views/codeindex.ejs
+++ b/views/codeindex.ejs
@@ -35,7 +35,7 @@
     <meta name="description" content="EmojiCode lets you encode any message into pure emojis and back again. The future of #Teen #Communication">
     <link type="text/css" rel="stylesheet" href="emojicode/css/pure-min.css">
     <link type="text/css" rel="stylesheet" href="emojicode/css/stylez.css">
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
 
     <link type="text/css" rel="stylesheet" href="emojicode/css/introjs.css">
 
@@ -57,8 +57,6 @@
 </head>
 
 <body>
-
-
     <script src="js/emojicode.js" type="text/javascript"></script>
 
 
@@ -97,15 +95,18 @@
                 <p>translate</p>
             </button>
         </div>
-        <div class="pure-u-1 pure-u-md-1-4"></div>
+        <div class="pure-u-1 pure-u-md-1-4">
+             <div id="mobile-footer">
+
+        <a id="mobile-guide" href="emojicode/#">Confused? Take A Guided Tour</a>
+        <div id="chrome-warning"></div>
+    </div>
+
+        </div>
     </div>
 
     <div id="hidden-copy"></div>
     <div id="chrome-warning"></div>
-    <div id="mobile-footer">
-        <a id="mobile-guide" href="emojicode/#">Guided Tour</a> |
-      <a href="emojicode/about.html">About EmojiCode</a>
 
-    </div>
 </body>
 </html>
