--- a/public/css/main.css
+++ b/public/css/main.css
@@ -576,4 +576,8 @@ html, body {
   text-align: center;
   font-style: italic; }
 
+.prodlink {
+  color: black;
+  text-decoration: underline; }
+
 /*# sourceMappingURL=main.css.map */
