--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,6 +144,8 @@ vision lol
         <h3>EMOJI COMICS</h3>
         <img src="img/examplecomic.png" alt="" class="img-responsive">
         <p>A full-featured web-based application for designing and publishing Emoji-based comic strips.</p>
+        <a href="/comics" class="prodlink">Visit Emoji Comics</a>
+
       </div>
       <div class="col-md-5 description">
         <img src="emojis/342.png" alt="" class="icon img-responsive">
@@ -151,6 +153,7 @@ vision lol
         <h3>EMOJI CODE</h3>
         <img src="img/examplecodesmall.png" alt="" class="icon img-responsive">
         <p>Encrypt messages into a proprietary Emoji language and communicate entirely via Emoji.</p>
+        <a href="/code" class="prodlink">Visit EmojiCode</a>
 
       </div>
       <div class="col-md-1"></div>
