--- a/views/create.ejs
+++ b/views/create.ejs
@@ -141,10 +141,9 @@
       </div>
 
       <div id="info">
-       <div class="about"><img src="/emojis/sparkles.png"><img src="/emojis/sparkles.png"> <img src="/emojis/tm.png"> <img src="/emojis/copyright.png"> <img src="/emojis/restricted.png"> 2014 lukey q <img src="/emojis/sparkles.png"><img src="/emojis/sparkles.png">
-        <br><img src="/emojis/rightarrow.png"> catch me on <img src="/emojis/bird.png"> <a target="_blank" href="http://twitter.com/nah_solo">twitter</a> <img src="/emojis/bird.png"> <img src="/emojis/leftarrow.png">
-        <br> <img src="/emojis/cooldude.png"> i have <a href="http://lucasquinn.com/" target="_blank">a website</a>  <img src="/emojis/tongueout.png">
-        <br><img src="/emojis/656.png"> <img src="/emojis/656.png"> <span class="we">"i only send emojis"</span> <img src="/emojis/656.png"> <img src="/emojis/656.png">
+       <div class="about"><img src="/emojis/sparkles.png"> <img src="/emojis/tm.png"> <img src="/emojis/copyright.png"> <img src="/emojis/restricted.png"> <a href="http://lucasquinn.com/" target="_blank">Lukey Q</a> / EmojiVision <img src="/emojis/sparkles.png">
+        <br> View <a href="/comics/random">Completed Comics</a>
+        <br><img src="/emojis/rightarrow.png"> Visit Us On <img src="/emojis/bird.png"> <a target="_blank" href="http://twitter.com/nah_solo">Twitter</a> <img src="/emojis/bird.png"> <img src="/emojis/leftarrow.png">
       </p></div>
 
     </div>
