--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,6 +114,32 @@ button:active {
 .fontbig {
   font-size: 1.4em; }
 
+#header {
+  background-color: black;
+  border-bottom: 2px solid white;
+  color: #36D7B7;
+  font-family: 'Lato';
+  height: 20px;
+  line-height: 25px;
+  margin-bottom: 5px;
+  padding: 10px;
+  text-align: center;
+  width: 100%; }
+  #header .title {
+    font-size: 1.5em;
+    font-family: 'Pacifico'; }
+
+.subtitle {
+  padding-left: 20px; }
+
+#header a {
+  text-decoration: none;
+  display: inline-block;
+  color: #36D7B7; }
+
+#header a:hover {
+  color: white; }
+
 #landing a {
   text-decoration: none;
   color: black; }
