adding awards to main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,10 @@ vision lol
           <li>
             <a href="#teampage" data-scroll="teampage">Our Team</a>
           </li>
+           <li>
+            <a href="#presspage" data-scroll="presspage">Press</a>
+          </li>
+
           <li>
             <a href="#contactpage" data-scroll="contactpage">Contact</a>
           </li>
@@ -196,6 +200,47 @@ vision lol
     </div>
   </div>
 
+  <div id="presspage" class="container page press">
+
+    <div class="row">
+      <div class="col-md-3"></div>
+
+      <div class="col-md-6 pagetitle">
+      <img src="emojis/393.png" alt="" class="icon img-responsive">
+        PRESS</div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award1.gif" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award2.gif" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award3.gif" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award4.gif" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award5.jpg" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award6.jpg" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award7.jpg" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award8.gif" alt="" class="icon img-responsive">
+      </div>
+      <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award9.gif" alt="" class="icon img-responsive">
+      </div>
+    </div>
+  </div>
+
   <div id="contactpage" class="container page contact">
 
     <div class="row">
@@ -215,5 +260,7 @@ vision lol
 
     </div>
   </div>
+
+
 </body>
 </html>
