--- a/public/css/main.css
+++ b/public/css/main.css
@@ -606,4 +606,8 @@ html, body {
   color: black;
   text-decoration: underline; }
 
+.presspic {
+  height: 300px;
+  padding: 20px; }
+
 /*# sourceMappingURL=main.css.map */
