--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,8 +144,9 @@ vision lol
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-5 description">
+        <a href="/comics" class="prodlink">
         <img src="emojis/538.png" alt="" class="icon img-responsive">
-        <h3>EMOJI COMICS</h3>
+        <h3>EMOJI COMICS</h3></a>
         <img src="img/examplecomic.png" alt="" class="img-responsive">
         <p>A full-featured web-based application for designing and publishing Emoji-based comic strips.</p>
         <a href="/comics" class="prodlink">Visit Emoji Comics</a>
@@ -153,8 +154,8 @@ vision lol
       </div>
       <div class="col-md-5 description">
         <img src="emojis/342.png" alt="" class="icon img-responsive">
-
-        <h3>EMOJI CODE</h3>
+        <a href="/code" class="prodlink">
+        <h3>EMOJI CODE</h3></a>
         <img src="img/examplecodesmall.png" alt="" class="icon img-responsive">
         <p>Encrypt messages into a proprietary Emoji language and communicate entirely via Emoji.</p>
         <a href="/code" class="prodlink">Visit EmojiCode</a>
@@ -206,7 +207,7 @@ vision lol
       <div class="col-md-3"></div>
 
       <div class="col-md-6 pagetitle">
-      <img src="emojis/393.png" alt="" class="icon img-responsive">
+      <img src="emojis/411.png" alt="" class="icon img-responsive">
         PRESS</div>
       <div class="col-md-3"></div>
     </div>
@@ -238,6 +239,15 @@ vision lol
       <div class="col-xs-4 col-md-2 presspic">
         <img src="img/award9.gif" alt="" class="icon img-responsive">
       </div>
+       <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award10.gif" alt="" class="icon img-responsive">
+      </div>
+       <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award11.gif" alt="" class="icon img-responsive">
+      </div>
+       <div class="col-xs-4 col-md-2 presspic">
+        <img src="img/award12.gif" alt="" class="icon img-responsive">
+      </div>
     </div>
   </div>
 
@@ -252,14 +262,17 @@ vision lol
       <div class="col-md-3"></div>
     </div>
     <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-5 product">emoji comics</div>
-      <div class="col-md-5 product">emoji code</div>
-      <div class="col-md-1"></div>
+      <div class="col-md-3"></div>
+      <div class="col-md-6 contactinfo">For press inquiries, Emoji technology licensing information, and job opportunities, please contact us on <a href="http://twitter.com/nah_solo" target="_blank">Twitter</a>.
+      <img src="emojis/169.png" alt="" class="icon img-responsive">
+
+      </div>
+      <div class="col-md-3"></div>
 
 
     </div>
   </div>
+
 
 
 </body>
