--- a/sass/index.scss
+++ b/sass/index.scss
@@ -6,6 +6,7 @@
     padding-top: 50px;
     display: inline-block;
     background-color: white;
+    margin: 0 auto;
   }
 
   .vision {
@@ -120,7 +121,21 @@ html, body {
   text-decoration: underline;
 }
 
+.prodlink:hover {
+  color: $button-color;
+}
+
 .presspic {
   height: 300px;
   padding: 20px;
 }
+
+.contactinfo {
+font-size: 2em;
+margin-top: 20px;
+}
+
+.footer {
+  background-color: white;
+}
+
