font size for main page

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -26,6 +26,7 @@
   .pagetitle {
     font-family: 'Lato';
     font-size: 3em;
+
     color: white;
     text-align: center;
     padding: 5px;
@@ -76,6 +77,10 @@
   }
   .intro {
     visibility: hidden;
+        @media(max-width:767px) {
+      font-size: 3em;
+    }
+
     // border: 10px solid white;
     color: black;
     font-family: 'Pacifico';
