--- a/public/css/main.css
+++ b/public/css/main.css
@@ -581,6 +581,9 @@ input[type="radio"]:checked + label {
   background-color: rgba(255, 255, 255, 0.85);
   text-align: center;
   font-size: 6em; }
+  @media (max-width: 767px) {
+    #mainpage .intro {
+      font-size: 3em; } }
 #mainpage .fill {
   min-width: 100%;
   width: 100%; }
