--- a/public/css/main.css
+++ b/public/css/main.css
@@ -565,8 +565,8 @@ input[type="radio"]:checked + label {
   background-color: white;
   border: 1px solid black; }
 #mainpage #splash {
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: url(/img/emojifront.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
