--- a/sass/index.scss
+++ b/sass/index.scss
@@ -67,8 +67,8 @@
     border: 1px solid black;
   }
   #splash {
-    width: 100vh;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: url(/img/emojifront.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
