--- a/public/css/main.css
+++ b/public/css/main.css
@@ -568,10 +568,10 @@ input[type="radio"]:checked + label {
   width: 100%;
   height: 100%;
   background: url(/img/emojifront.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
+  -webkit-background-size: auto;
+  -moz-background-size: auto;
+  -o-background-size: auto;
+  background-size: auto; }
 #mainpage .intro {
   visibility: hidden;
   color: black;
