--- a/sass/index.scss
+++ b/sass/index.scss
@@ -70,10 +70,10 @@
     width: 100%;
     height: 100%;
     background: url(/img/emojifront.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    -webkit-background-size: auto;
+    -moz-background-size: auto;
+    -o-background-size: auto;
+    background-size: auto;
   }
   .intro {
     visibility: hidden;
