--- a/views/comicindex.ejs
+++ b/views/comicindex.ejs
@@ -41,6 +41,8 @@
   <title>Emoji Comics</title>
 </head>
 <body>
+  <% include /partials/header %>
+
     <div class="wrapper">
       <div id="titlewrap">
       <div id="maintitle">EMOJI COMICS</div>
