--- a/views/create.ejs
+++ b/views/create.ejs
@@ -142,7 +142,7 @@
 
       <div id="info">
        <div class="about"><img src="/emojis/sparkles.png"> <img src="/emojis/tm.png"> <img src="/emojis/copyright.png"> <img src="/emojis/restricted.png"> <a href="http://lucasquinn.com/" target="_blank">Lukey Q</a> / EmojiVision <img src="/emojis/sparkles.png">
-        <br> View <a href="/comics/random">Completed Comics</a>
+        <br> Check Out <a href="/comics/random">Published Comics</a>
         <br><img src="/emojis/rightarrow.png"> Visit Us On <img src="/emojis/bird.png"> <a target="_blank" href="http://twitter.com/nah_solo">Twitter</a> <img src="/emojis/bird.png"> <img src="/emojis/leftarrow.png">
       </p></div>
 
