--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,9 @@ vision lol
     </div>
     <div class="row">
       <div class="col-md-1"></div>
-      <div class="col-md-5 description">
+      <div class="col-md-10">
+        <div class="row">
+              <div class="col-md-4 description">
         <a href="/comics" class="prodlink">
         <img src="emojis/538.png" alt="" class="icon img-responsive">
         <h3>EMOJI COMICS</h3></a>
@@ -152,7 +154,7 @@ vision lol
         <a href="/comics" class="prodlink">Visit Emoji Comics</a>
 
       </div>
-      <div class="col-md-5 description">
+      <div class="col-md-4 description">
         <img src="emojis/342.png" alt="" class="icon img-responsive">
         <a href="/code" class="prodlink">
         <h3>EMOJI CODE</h3></a>
@@ -160,6 +162,18 @@ vision lol
         <p>Encrypt messages into a proprietary Emoji language and communicate entirely via Emoji.</p>
         <a href="/code" class="prodlink">Visit EmojiCode</a>
 
+      </div>
+
+      <div class="col-md-4 description">
+        <img src="emojis/656.png" alt="" class="icon img-responsive">
+        <a href="https://www.youtube.com/watch?v=HIWUF1tZ-gU" class="prodlink">
+        <h3>MIDNITE VOYAGE</h3></a>
+        <img src="img/moonpromo.png" alt="" class="icon img-responsive">
+        <p>An audio-visual journey through the fabric of space/time with Moon Emoji.</p>
+        <a href="https://www.youtube.com/watch?v=HIWUF1tZ-gU" class="prodlink">Visit Moon Emoji's Midnite Voyage</a>
+
+      </div>
+    </div>
       </div>
       <div class="col-md-1"></div>
     </div>
