--- a/public/css/main.css
+++ b/public/css/main.css
@@ -474,6 +474,10 @@ input[type="radio"]:checked + label {
   text-decoration: underline;
   color: black; }
 
+#twitbutt {
+  float: right;
+  margin-right: 10px; }
+
 .carousel-container {
   width: 910px;
   height: 310px;
@@ -533,10 +537,11 @@ input[type="radio"]:checked + label {
   padding-top: 50px;
   display: inline-block;
   background-color: white;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-bottom: -5px; }
 #mainpage #moreinfo {
   margin: 0 auto;
-  margin-top: 45px;
+  margin-top: 100px;
   animation-duration: 4s;
   animation-name: bounce; }
 #mainpage .pagetitle {
@@ -568,10 +573,10 @@ input[type="radio"]:checked + label {
   width: 100%;
   height: 100%;
   background: url(/img/emojifront.jpg) no-repeat center center fixed;
-  -webkit-background-size: auto;
-  -moz-background-size: auto;
-  -o-background-size: auto;
-  background-size: auto; }
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
 #mainpage .intro {
   visibility: hidden;
   color: black;
