--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,5 @@
 #mainpage {
+
   .page {
     width: 100%;
     min-height: 100%;
@@ -7,6 +8,7 @@
     display: inline-block;
     background-color: white;
     margin: 0 auto;
+    margin-bottom: -5px;
   }
 
   .vision {
@@ -14,7 +16,7 @@
 
   #moreinfo {
     margin: 0 auto;
-    margin-top: 45px;
+    margin-top: 100px;
     animation-duration: 4s;
     animation-name: bounce;
   }
@@ -70,10 +72,10 @@
     width: 100%;
     height: 100%;
     background: url(/img/emojifront.jpg) no-repeat center center fixed;
-    -webkit-background-size: auto;
-    -moz-background-size: auto;
-    -o-background-size: auto;
-    background-size: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
   .intro {
     visibility: hidden;
