--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,3 @@
 <div id="header">
-  <span class="title"><a href="/">EmojiVision Industries</a></span>
+  <span class="title"><a href="/">EmojiVision</a></span>
 </div>
