--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@ vision lol
 -->
 
 
-<meta name="description" content="EmojiVision Industries">
+<meta name="description" content="EmojiVision: leading Emoji researchers and consultants">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta charset="utf-8">
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -149,7 +149,7 @@ vision lol
         <a href="/comics" class="prodlink">
         <img src="emojis/538.png" alt="" class="icon img-responsive">
         <h3>EMOJI COMICS</h3></a>
-        <img src="img/examplecomic.png" alt="" class="img-responsive">
+        <img src="img/onepanel.png" alt="" class="icon img-responsive">
         <p>A full-featured web-based application for designing and publishing Emoji-based comic strips.</p>
         <a href="/comics" class="prodlink">Visit Emoji Comics</a>
 
@@ -158,7 +158,7 @@ vision lol
         <img src="emojis/342.png" alt="" class="icon img-responsive">
         <a href="/code" class="prodlink">
         <h3>EMOJI CODE</h3></a>
-        <img src="img/examplecodesmall.png" alt="" class="icon img-responsive">
+        <img src="img/codetranslate.gif" alt="" class="icon img-responsive">
         <p>Encrypt messages into a proprietary Emoji language and communicate entirely via Emoji.</p>
         <a href="/code" class="prodlink">Visit EmojiCode</a>
 
@@ -226,40 +226,40 @@ vision lol
       <div class="col-md-3"></div>
     </div>
     <div class="row">
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award1.gif" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award2.gif" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award3.gif" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award4.gif" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award5.jpg" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award6.jpg" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award7.jpg" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award8.gif" alt="" class="icon img-responsive">
       </div>
-      <div class="col-xs-4 col-md-2 presspic">
+      <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award9.gif" alt="" class="icon img-responsive">
       </div>
-       <div class="col-xs-4 col-md-2 presspic">
+       <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award10.gif" alt="" class="icon img-responsive">
       </div>
-       <div class="col-xs-4 col-md-2 presspic">
+       <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award11.gif" alt="" class="icon img-responsive">
       </div>
-       <div class="col-xs-4 col-md-2 presspic">
+       <div class="col-xs-6 col-md-2 presspic">
         <img src="img/award12.gif" alt="" class="icon img-responsive">
       </div>
     </div>
