--- a/public/css/main.css
+++ b/public/css/main.css
@@ -571,6 +571,7 @@ input[type="radio"]:checked + label {
   border: 1px solid black; }
 #mainpage #splash {
   width: 100%;
+  position: fixed;
   height: 100%;
   background: url(/img/emojifront.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -624,7 +625,8 @@ html, body {
 
 .contactinfo {
   font-size: 2em;
-  margin-top: 20px; }
+  padding: 30px;
+  margin-top: 50px; }
 
 .footer {
   background-color: white; }
