--- a/sass/index.scss
+++ b/sass/index.scss
@@ -70,6 +70,7 @@
   }
   #splash {
     width: 100%;
+    position: fixed;
     height: 100%;
     background: url(/img/emojifront.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -139,7 +140,8 @@ html, body {
 
 .contactinfo {
 font-size: 2em;
-margin-top: 20px;
+padding: 30px;
+margin-top: 50px;
 }
 
 .footer {
