--- a/public/css/main.css
+++ b/public/css/main.css
@@ -577,6 +577,9 @@ input[type="radio"]:checked + label {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
+  @media (max-width: 767px) {
+    #mainpage #splash {
+      background-size: scroll; } }
 #mainpage .intro {
   visibility: hidden;
   color: black;
