--- a/public/css/main.css
+++ b/public/css/main.css
@@ -573,6 +573,10 @@ input[type="radio"]:checked + label {
   width: 100%;
   height: 100%;
   background: url(/img/emojifront.jpg) no-repeat center center fixed;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
