--- a/sass/index.scss
+++ b/sass/index.scss
@@ -72,6 +72,10 @@
     width: 100%;
     height: 100%;
     background: url(/img/emojifront.jpg) no-repeat center center fixed;
+    -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
