trying backstretch plugin

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,8 @@ vision lol
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/js/vendor.js"></script>
+<script type="text/javascript" src="/js/vendor/jquery.backstretch.min.js"></script>
+
 <script type="text/javascript" src="/js/slick.js"></script>
 <script type="text/javascript" src="/js/indexpage.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
