--- a/public/css/main.css
+++ b/public/css/main.css
@@ -572,7 +572,7 @@ input[type="radio"]:checked + label {
 #mainpage #splash {
   width: 100%;
   height: 100%;
-  background: url(/img/emojifront.jpg) no-repeat center center fixed;
+  background: url(/img/emojifrontsmall.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
