--- a/sass/index.scss
+++ b/sass/index.scss
@@ -71,7 +71,7 @@
   #splash {
     width: 100%;
     height: 100%;
-    background: url(/img/emojifront.jpg) no-repeat center center fixed;
+    background: url(/img/emojifrontsmall.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
