--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,12 +1,11 @@
-#header {
+#emojiheader {
  background-color: black;
  border-bottom: 2px solid white;
  color: $button-color;
  font-family: 'Lato';
- height: 20px;
  line-height: 25px;
  margin-bottom: 5px;
- padding: 10px;
+ padding: 5px;
  text-align: center;
  width: 100%;
  .title {
@@ -18,12 +17,12 @@
  padding-left: 20px;
 }
 
-#header a {
+#emojiheader a {
  text-decoration: none;
  display: inline-block;
  color: $button-color;
 }
 
-#header a:hover {
+#emojiheader a:hover {
  color: white;
 }
